[package]
authors = ["Zeke Sonxx <zeke@zekesonxx.com>"]
build = "build.rs"
name = "smaz-rs"
publish = false
version = "0.1.0"

[features]
cbinding = ["gcc", "libc"]

[build-dependencies]
gcc = { version = "0.3", optional = true }
rand = "0.3.15"

[dependencies]
lazy_static = "0.2.2"
libc = { version = "0.2.20", optional = true }
